--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,7 +2,117 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: 100;
+  src: url('../fonts/woff2/PeydaWebFaNum-Thin.woff2') format('woff2'),
+     url('../fonts/woff/PeydaWebFaNum-Thin.woff') format('woff');
+}
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: 200;
+  src: url('../fonts/woff2/PeydaWebFaNum-ExtraLight.woff2') format('woff2'),
+     url('../fonts/woff/PeydaWebFaNum-ExtraLight.woff') format('woff');
+}
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/woff2/PeydaWebFaNum-Light.woff2') format('woff2'),
+    url('../fonts/woff/PeydaWebFaNum-Light.woff') format('woff');
+}
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/woff2/PeydaWebFaNum-Medium.woff2') format('woff2'),
+    url('../fonts/woff/PeydaWebFaNum-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/woff2/PeydaWebFaNum-SemiBold.woff2') format('woff2'),
+   url('../fonts/woff/PeydaWebFaNum-SemiBold.woff') format('woff'); 
+}
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: 800;
+  src: url('../fonts/woff2/PeydaWebFaNum-ExtraBold.woff2') format('woff2'),
+   url('../fonts/woff/PeydaWebFaNum-ExtraBold.woff') format('woff');
+}
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/woff2/PeydaWebFaNum-Black.woff2') format('woff2'),
+    url('../fonts/woff/PeydaWebFaNum-Black.woff') format('woff');
+}
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: bold;
+  src: url('../fonts/woff2/PeydaWebFaNum-Bold.woff2') format('woff2'),
+     url('../fonts/woff/PeydaWebFaNum-Bold.woff') format('woff');
+}
+
+@font-face {
+  font-family: PeydaWebFaNum;
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/woff2/PeydaWebFaNum-Regular.woff2') format('woff2'),
+     url('../fonts/woff/PeydaWebFaNum-Regular.woff') format('woff'); 
+}
+
+
+@font-face {
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: 100;
+  src: url('../fonts/woff2/en_font/HelveticaNeueCyr-Thin.woff2') format('woff2'),
+    url('../fonts/woff/en_font/HelveticaNeueCyr-Thin.woff') format('woff');
+}
+
+@font-face {
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/woff2/en_font/HelveticaNeueCyr-Light.woff2') format('woff2'),
+    url('../fonts/woff/en_font/HelveticaNeueCyr-Light.woff') format('woff'); 
+}
+
+@font-face {
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/woff2/en_font/HelveticaNeueCyr-Medium.woff2') format('woff2'),
+     url('../fonts/woff/en_font/HelveticaNeueCyr-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: bold;
+  src: url('../fonts/woff2/en_font/HelveticaNeueCyr-Bold.woff2') format('woff2'),
+    url('../fonts/woff/en_font/HelveticaNeueCyr-Bold.woff') format('woff');
+}
+
 *::-webkit-scrollbar {
   width: 0;
   height: 0;
+}
+
+html, body {
+  font-family: PeydaWebFaNum !important;
 }
