feat: second section

--- a/src/features/Dashboard/index.css
+++ b/src/features/Dashboard/index.css
@@ -1,4 +1,4 @@
-.intro{
+.intro:before{
     content: "";
     position: absolute;
     z-index: 0;
@@ -8,5 +8,15 @@
     background: radial-gradient(circle, #05a043 0%, #1c2333 60%);
     height: 1000px;
     width: 1200px;
-    will-change: transform, opacity;
+}
+.features:before{
+    content: "";
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: -35%;
+    background: #1C2333;
+    background: radial-gradient(circle, #05a043 0%, #1c2333 60%);
+    height: 450px;
+    width: 600px;
 }
