feat: pricing desktop and stats mobile and desktop

--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -1,6 +1,9 @@
 .card{
     background: linear-gradient(to bottom, #29343e 0%, #1c2333 50%);
 }
+.card-stats{
+    background: linear-gradient(to bottom, #2d3741 0%, #202736 50%);
+}
 .inner-circle{
     border-radius: 100px;
     display: flex;
