--- a/src/features/Dashboard/index.css
+++ b/src/features/Dashboard/index.css
@@ -1,4 +1,4 @@
-.intro:before{
+.intro:before {
     content: "";
     position: absolute;
     z-index: 0;
@@ -9,7 +9,8 @@
     height: 1000px;
     width: 1200px;
 }
-.features:before{
+
+.features:before {
     content: "";
     position: absolute;
     z-index: -100;
@@ -20,7 +21,8 @@
     height: 450px;
     width: 600px;
 }
-.customer:before{
+
+.customer:before {
     content: "";
     position: absolute;
     z-index: -10;
@@ -30,4 +32,63 @@
     background: radial-gradient(circle, #05a043 0%, #1c2333 35%);
     height: 150px;
     width: 300px;
+}
+.price:before {
+    content: "";
+    position: absolute;
+    z-index: -10;
+    top: 70%;
+    left: -10%;
+    background: #1C2333;
+    background: radial-gradient(circle, #05a043 0%, #1c2333 35%);
+    height: 150px;
+    width: 300px;
+}
+
+.stats {
+    position: relative;
+    z-index: 10;
+    padding-top: 80px;
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    background: linear-gradient(to top, #1C2333 0%, #292F3C 75%);
+}
+
+@media (max-width: 768px) {
+    .features::before {
+        content: none;
+        display: none;
+    }
+
+    .customer::before {
+        content: none;
+        display: none;
+    }
+    .price::before {
+        content: "";
+        position: absolute;
+        z-index: -10;
+        top: 100%;
+        left: -10%;
+        background: #1C2333;
+        background: radial-gradient(circle, #05a043 0%, #1c2333 25%);
+        height: 50px;
+        width: 150px;
+    }
+
+    .intro:before {
+        top: -50%;
+        right: -100%;
+        height: 700px;
+        width: 900px;
+    }
+
+    .stats {
+        margin-top: 40px;
+    }
+
 }
