--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,110 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
-  font-weight: 100;
-  src: url('../fonts/woff2/PeydaWebFaNum-Thin.woff2') format('woff2'),
-     url('../fonts/woff/PeydaWebFaNum-Thin.woff') format('woff');
-}
-
-@font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
-  font-weight: 200;
-  src: url('../fonts/woff2/PeydaWebFaNum-ExtraLight.woff2') format('woff2'),
-     url('../fonts/woff/PeydaWebFaNum-ExtraLight.woff') format('woff');
-}
-
-@font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
-  font-weight: 300;
-  src: url('../fonts/woff2/PeydaWebFaNum-Light.woff2') format('woff2'),
-    url('../fonts/woff/PeydaWebFaNum-Light.woff') format('woff');
-}
-
-@font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/woff2/PeydaWebFaNum-Medium.woff2') format('woff2'),
-    url('../fonts/woff/PeydaWebFaNum-Medium.woff') format('woff');
-}
-
-@font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/woff2/PeydaWebFaNum-SemiBold.woff2') format('woff2'),
-   url('../fonts/woff/PeydaWebFaNum-SemiBold.woff') format('woff'); 
-}
-
-@font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
-  font-weight: 800;
-  src: url('../fonts/woff2/PeydaWebFaNum-ExtraBold.woff2') format('woff2'),
-   url('../fonts/woff/PeydaWebFaNum-ExtraBold.woff') format('woff');
-}
-
-@font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
-  font-weight: 900;
-  src: url('../fonts/woff2/PeydaWebFaNum-Black.woff2') format('woff2'),
-    url('../fonts/woff/PeydaWebFaNum-Black.woff') format('woff');
-}
-
-@font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
-  font-weight: bold;
-  src: url('../fonts/woff2/PeydaWebFaNum-Bold.woff2') format('woff2'),
-     url('../fonts/woff/PeydaWebFaNum-Bold.woff') format('woff');
-}
-
-@font-face {
-  font-family: PeydaWebFaNum;
-  font-style: normal;
+  font-family: 'Yekan';
+  src:	url('../fonts/Yekan.eot'); /* IE9 Compat Modes */
+  src:	url('../fonts/Yekan.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/Yekan.woff2') format('woff2'), /* Modern Browsers */
+  url('../fonts/Yekan.woff') format('woff'), /* Modern Browsers */
+  url('../fonts/Yekan.otf') format('opentype'), /* Open Type Font */
+  url('../fonts/Yekan.ttf') format('truetype'); /* Safari, Android, iOS */
   font-weight: normal;
-  src: url('../fonts/woff2/PeydaWebFaNum-Regular.woff2') format('woff2'),
-     url('../fonts/woff/PeydaWebFaNum-Regular.woff') format('woff'); 
-}
-
-
-@font-face {
-  font-family: Helvetica;
   font-style: normal;
-  font-weight: 100;
-  src: url('../fonts/woff2/en_font/HelveticaNeueCyr-Thin.woff2') format('woff2'),
-    url('../fonts/woff/en_font/HelveticaNeueCyr-Thin.woff') format('woff');
-}
-
-@font-face {
-  font-family: Helvetica;
-  font-style: normal;
-  font-weight: 300;
-  src: url('../fonts/woff2/en_font/HelveticaNeueCyr-Light.woff2') format('woff2'),
-    url('../fonts/woff/en_font/HelveticaNeueCyr-Light.woff') format('woff'); 
-}
-
-@font-face {
-  font-family: Helvetica;
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/woff2/en_font/HelveticaNeueCyr-Medium.woff2') format('woff2'),
-     url('../fonts/woff/en_font/HelveticaNeueCyr-Medium.woff') format('woff');
-}
-
-@font-face {
-  font-family: Helvetica;
-  font-style: normal;
-  font-weight: bold;
-  src: url('../fonts/woff2/en_font/HelveticaNeueCyr-Bold.woff2') format('woff2'),
-    url('../fonts/woff/en_font/HelveticaNeueCyr-Bold.woff') format('woff');
+  text-rendering: optimizeLegibility;
+  font-display: auto;
 }
 
 *::-webkit-scrollbar {
@@ -114,12 +22,11 @@
 }
 
 html, body {
-  font-family: PeydaWebFaNum !important;
+  font-family: 'Yekan' !important;
   background-color: #1C2333;
   color: white;
   padding: 0;
   direction: rtl;
   margin: 0;
-  scroll-behavior: smooth !important;
   overflow-x: hidden;
 }
