feat: command line section and begin slider section

--- a/src/features/Dashboard/index.css
+++ b/src/features/Dashboard/index.css
@@ -75,9 +75,24 @@
     height: 800px;
     width: 800px;
 }
+.command-line:before {
+    content: "";
+    position: absolute;
+    z-index: -10;
+    top: 50%;
+    right: -10%;
+    background: #1C2333;
+    background: radial-gradient(circle, #05a043 0%, #1c2333 50%);
+    height: 300px;
+    width: 300px;
+}
 
 @media (max-width: 768px) {
     .features::before {
+        content: none;
+        display: none;
+    }
+    .command-line::before {
         content: none;
         display: none;
     }
