--- a/src/features/Dashboard/index.css
+++ b/src/features/Dashboard/index.css
@@ -15,11 +15,11 @@
     position: absolute;
     z-index: -100;
     top: 0;
-    left: -35%;
+    left: -25%;
     background: #1C2333;
     background: radial-gradient(circle, #05a043 0%, #1c2333 60%);
     height: 450px;
-    width: 600px;
+    width: 450px;
 }
 
 .customer:before {
@@ -107,6 +107,12 @@
     background: radial-gradient(circle, #05a043 0%, #1c2333 60%);
     height: 800px;
     width: 800px;
+}
+@media (max-width: 1024px) {
+    .features::before {
+        content: none;
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
